--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,6 +11,7 @@
             <div class="form-group">
                 <label for="password">Password</label>
                 <input class="form-control" type="password" name="password" placeholder="password">
+                <a href="/forgot">Forgot password?</a>
             </div>
             <div class="form-group">
                 <button class="btn btn-lg btn-primary btn-block">Login</button>
