--- a/views/register.ejs
+++ b/views/register.ejs
@@ -22,7 +22,7 @@
             </div>
             <div class="form-group">
                 <label for="email">Email address</label>
-                <input class="form-control" type="email" name="email" placeholder="john@doe.com">
+                <input class="form-control" type="email" name="email" placeholder="john@doe.com" required>
             </div>
             <div class="form-group">
                 <label for="avatar">Avatar</label>
