--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -12,19 +12,25 @@
     </header>
     
     <div class="row text-center" style="display:flex; flex-wrap: wrap;">
-        <% campgrounds.forEach( function (campground) { %>
-        <div class="col-md-3 col-sm-6">
-                <div class="thumbnail">
-                    <img src="<%= campground.image %>">
-                    <div class="caption">
-                        <h4><%= campground.name %></h4>
-                    </div>
-                    <p>
-                        <a class="btn btn-info" href="/campgrounds/<%=campground._id%>">More Info</a>
-                    </p>
+            <% if (campgrounds.length < 1) { %>
+                <div class="col_centered">
+                    <h3>No campgrounds to show!</h3>
                 </div>
-        </div>
-        <% }); %>
+            <% } else { %>
+            <% campgrounds.forEach( function (campground) { %>
+            <div class="col-md-3 col-sm-6">
+                    <div class="thumbnail">
+                        <img src="<%= campground.image %>">
+                        <div class="caption">
+                            <h3><%= campground.name %></h3>
+                        </div>
+                        <p>
+                            <a class="btn btn-info" href="/campgrounds/<%=campground._id%>">More Info</a>
+                        </p>
+                    </div>
+            </div>
+            <% }); %>
+        <% } %>
     </div>
 </div>
 <% include ../partials/footer %>
