--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -1,7 +1,7 @@
 <% include ../partials/header %>
 
 <div class="row">
-    <div class="col-sm-3 col-md-2 col-sm-push-5 col-md-push-4 col-sm-offset-2 col-md-offset-3">
+    <div class="col-sm-3 col-sm-push-5 col-sm-offset-2 col-md-2 col-md-push-4 col-md-offset-3">
         <div id="profile_well" class="well well-sm">
             <h3 class="profile_header"><%= user.username %>'s profile</h3>
             <div id="profile_thumbnail" class="thumbnail">
@@ -9,7 +9,6 @@
             </div>
             <br>
             <div class="caption profile_header"><em><%= user.bio %></em></div>
-            <br>
             <div class="caption profile_header"><%= user.firstName %>  <%= user.lastName %></div>
             <div class="caption profile_header"><%= user.email %></div>
             <div class="caption profile_header"><%= user.campCount %> Campgrounds submitted</div>
@@ -23,10 +22,18 @@
         <div id="profile_well" class="well well-sm">
             <h4 class="profile_header">Recent comments</h4>
             <hr id="profile_hr">
+            <div class="well well-sm">
+                <% comments.forEach(function(comment) { %>
+                    <span> <%= comment.text %></span>
+                    <br>
+                    <span class="caption pull-right"><em><%= moment(comment.createdAt).fromNow() %></em></span>
+                <% }); %>
+            </div>
+            
         </div>
     </div>
 
-    <div class="col-sm-5 col-md-4 col-sm-pull-3 col-md-pull-2">
+    <div class="col-sm-5 col-sm-pull-3 col-md-4 col-md-pull-2">
         <div id="camp_well" class="well">
             <h3 class="caption profile_header">Submitted Campgrounds</h3>
                 <% campgrounds.forEach(function(campground) { %>
