--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-md-3">
             <div class="list-group">
-                <li id="1" class="list-group-item">Image 1</li> 
+                <li id="1" class="list-group-item active">Image 1</li> 
                 <li id="2" class="list-group-item">Image 2</li>
                 <li id="3" class="list-group-item">Image 3</li>
             </div>
