--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -20,7 +20,7 @@
             <% campgrounds.forEach( function (campground) { %>
             <div class="col-md-3 col-sm-6">
                     <div class="thumbnail">
-                        <img src="<%= campground.image1 %>">
+                        <a href="/campgrounds/<%=campground._id%>><img src="<%= campground.image1 %>"></a>
                         <div class="caption">
                             <h3><%= campground.name %></h3>
                         </div>
