camp images now link to more info

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -20,7 +20,7 @@
             <% campgrounds.forEach( function (campground) { %>
             <div class="col-md-3 col-sm-6">
                     <div class="thumbnail">
-                        <a href="/campgrounds/<%=campground._id%>"></a><img src="<%= campground.image1 %>"></a>
+                        <a href="/campgrounds/<%=campground._id%>"><img src="<%= campground.image1 %>"></a>
                         <div class="caption">
                             <h3><%= campground.name %></h3>
                         </div>
